@@ -6,7 +6,7 @@ my $void = <<'SKIP';
 
     ppport.h -- Perl/Pollution/Portability Version 3.73
 
-    Automatically created by Devel::PPPort running under perl 5.041012.
+    Automatically created by Devel::PPPort running under perl 5.042000.
 
     Do NOT edit this file directly! -- Edit PPPort_pm.PL and the
     includes in parts/inc/ instead.
